# finalproject_sasmsonov_m25_555

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
data/: exchange_rates.json  portfolios.json  rates.json  users.json
valutatrade_hub/: __init__.py  decorators.py  logging_config.py
valutatrade_hub/cli/: __init__.py  interface.py
valutatrade_hub/core/: __init__.py  currencies.py  decorators.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: __init__.py  database.py  settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  storage.py  updater.py
