[tool.poetry]
name = "finalproject-sasmsonov-m25-555"
version = "0.1.0"
description = "Финальный проект для семестра 01"
authors = ["Igor Samsonov <prinstonsam@gmail.com>"]
readme = "README.md"
packages = [
    { include = "valutatrade_hub" },
]

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.17.0"
requests = "^2.31.0"

[tool.poetry.scripts]
project = "main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Игнорируем длинные строки в пользовательских сообщениях

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.valutatrade]
# Пути к данным
data_dir = "data"
logs_dir = "logs"

# Настройки логирования
log_level = "INFO"
log_file = "valutatrade_hub.log"
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_max_bytes = 10485760  # 10 MB
log_backup_count = 5

# Настройки приложения
default_base_currency = "USD"
rates_ttl_seconds = 3600  # 1 час

